* Fixed crash in taskbar plugin after number of desktops was updated.
* Fixed incorrect panel geometry initialization.

0.8.1
-------------------------------------------------------------------------
* Improved OSS headers detection a bit.
* Fixed expand setting on plugins with default_expand when more than one
    is available on the same panel.
* Fixed icon for task button that retrieved using WM_HINTS.
* Fixed wrong PanelIconGrid arrangement in vertical panel orientation.
* Fixed missing handlers disconnect when destroying Task structure.
* Removed writing debug messages to file when 'indicator' plugin is in
    use - it will write all the debug there and that changes the behavior
    which was not intended really.
* Corrected background for 'indicator' plugin.
* Fixed update 'indicator' plugin on configuration changes.
* Fixed battery status: if discharge rate is 0 then it's charged.
* Fixed incorrect cycle in netproc_devicelist_clear() leading to crash on
    resume (after suspend).
* Fixed scanning for temperature sensors which failed with some kernels.
* Changed reconfiguring panel behavior: callbacks to plugins will be sent
    on idle, not immediately to avoid "stuck" spin button (and eventually
    even crash was possible).
* Fixed initial icon on 'volumealsa' to show real state instead of muted.
* Fixed 'dclock' updating that it will show time on start, not just on
    next second change. It would create impression it's slow otherwise.
* Fixed wrong task button activation on not processed drag of button.

0.8.0
-------------------------------------------------------------------------
* Added workaround for crash in gtk-run with old libmenu-cache.
* Core functions are separated into a private library to allow reliable
    linking of modules using -Wl,-z,defs.
* Added macro LXPANEL_CHECK_VERSION() for third party pluguns API check.
* Added CONF_TYPE_EXTERNAL support for lxpanel_generic_config_dlg().